Added tags to increase visibility

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/lakshits11/monokai-pirokai.git"
   },
   "description": "The ultimate theme that combines the vibrant colors of Monokai Pro with a sleek, dark background for maximum style and productivity",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.20.0"
   },
@@ -32,5 +32,410 @@
         "path": "./themes/Monokai Pirokai - Beach Sunset.json"
       }
     ]
-  }
+  },
+  "keywords": [
+    "Andromeda Mariana",
+    "Andromeda Mariana Italic",
+    "Andromeda Mariana Bordered",
+    "Andromeda Mariana Italic Bordered",
+    "Ayu Darkvenom",
+    "Blueberry Banana",
+    "Brogrammer",
+    "Calm Darkvenom",
+    "Catppuccin",
+    "Cosmic",
+    "Darcula",
+    "Darcula Darker",
+    "Dark Phoenix",
+    "Darwin",
+    "Dracula Redefined",
+    "Dracula Redefined No Italic",
+    "Ethereal Aura",
+    "Ethereal Gaze",
+    "Ethereal Quest",
+    "Ethereal Zen",
+    "Github Black",
+    "Github Dark",
+    "Github Dark Default",
+    "Github Dark Dimmed",
+    "Github Dark High Contrast.json",
+    "Github Dark Colorblind",
+    "Github Minimal",
+    "Gruvbox Dark",
+    "Gruvbox Extra Dark",
+    "Gruvbox Extra Dark Italic",
+    "Gruvbox Material Dark",
+    "Gruvbox Concoctis Dark",
+    "Gruvbox NvChad",
+    "Horizon",
+    "Horizon Warm",
+    "Karma",
+    "Laserwave",
+    "Laserwave Italic",
+    "Lunar",
+    "Material Black No Italic",
+    "Material Black Italic",
+    "Material High Contrast No Italic",
+    "Material High Contrast Italic",
+    "Material Ocean No Italic",
+    "Material Ocean Italic",
+    "Midnight City",
+    "Monokai Awesome",
+    "Monokai Black",
+    "Monokai Night Time Italic",
+    "Monokai Night Time No Italic",
+    "Monokai Pirokai Arctic Frost",
+    "Monokai Pirokai Beach Sunset",
+    "Monokai Winter Night",
+    "Mystic Cyan",
+    "Neon City Darkvenom",
+    "Neovim",
+    "Night Owl",
+    "Night Owl No Italic",
+    "Nord Cold",
+    "Nord Dark",
+    "Ocean Night",
+    "One Dark Pro",
+    "One Dark Pro No Italic",
+    "One Monokai",
+    "One Monokai Darker",
+    "Outrun Space",
+    "Panda Syntax",
+    "Pink Panther",
+    "Poimandres Dark",
+    "Poimandres Darker",
+    "Poimandres More Darker",
+    "Poimandres Black",
+    "Rose Noctis",
+    "Sia Synthwave",
+    "Seti Black",
+    "Shades of Purple",
+    "Shades of Purple (Super Dark)",
+    "Slime",
+    "Slime Extra Dark",
+    "Slime Extra Dark Italic",
+    "Snazzy",
+    "Stellar",
+    "Sweet Dark",
+    "Sweet Dark Italic",
+    "Sweet Dark Bold",
+    "Sweet Dark Italic Bold",
+    "Synthwave Black(No Neon)",
+    "Tommorow Night Minimal",
+    "Xcode Catalina",
+    "Xcode Catalina Bold",
+    "Xcode Fusion",
+    "Zenith",
+    "dark",
+    "best",
+    "themes",
+    "bestthemes",
+    "best themes",
+    "best themes redefined",
+    "redefined",
+    "deep",
+    "theme",
+    "space",
+    "abyss",
+    "tokyo",
+    "solarized",
+    "pro",
+    "dracula",
+    "official",
+    "one",
+    "monokai",
+    "night",
+    "material",
+    "winter",
+    "synthwave",
+    "synth",
+    "palenight",
+    "cobalt",
+    "andromeda",
+    "atom",
+    "nord",
+    "sublime",
+    "bearded",
+    "darcula",
+    "eva",
+    "omni",
+    "vue",
+    "react",
+    "svelte",
+    "vim",
+    "neovim",
+    "nvim",
+    "gruvbox",
+    "markdown",
+    "github",
+    "rainbow",
+    "rainglow",
+    "slack",
+    "2077",
+    "cyberpunk",
+    "electron",
+    "bluloco",
+    "green",
+    "blue",
+    "darkblue",
+    "darkgreen",
+    "angular",
+    "city",
+    "light",
+    "flat",
+    "aura",
+    "doki",
+    "ruby",
+    "helium",
+    "magenta",
+    "cyan",
+    "orange",
+    "carbon",
+    "bear",
+    "color",
+    "peace",
+    "copilot",
+    "super",
+    "aurora",
+    "x",
+    "syntax",
+    "ariake",
+    "kanagawa",
+    "firefox",
+    "hack",
+    "hacker",
+    "azure",
+    "halcyon",
+    "firefly",
+    "base16",
+    "hyper",
+    "symbols",
+    "black",
+    "radical",
+    "code",
+    "snazzy",
+    "slime",
+    "nebula",
+    "moon",
+    "beautiful",
+    "atomize",
+    "webstorm",
+    "laser",
+    "wolf",
+    "cold",
+    "xcode",
+    "notepad",
+    "sea",
+    "jetbrains",
+    "infinity",
+    "neon",
+    "fantastic",
+    "midnight",
+    "modern",
+    "purple",
+    "laravel",
+    "simple",
+    "default",
+    "pink",
+    "classic",
+    "symfony",
+    "smooth",
+    "universe",
+    "python",
+    "swift",
+    "rust",
+    "just",
+    "omi",
+    "c#",
+    "c++",
+    "java",
+    "dart",
+    "go",
+    "php",
+    "blade",
+    "windows",
+    "astro",
+    "tailwind",
+    "wind",
+    "frost",
+    "edge",
+    "nano",
+    "arc",
+    "vs",
+    "chrome",
+    "horizon",
+    "script",
+    "os",
+    "shadow",
+    "soft",
+    "retro",
+    "free",
+    "flow",
+    "ultimate",
+    "next",
+    "shade",
+    "high",
+    "better",
+    "zen",
+    "turbo",
+    "new",
+    "panda",
+    "dev",
+    "style",
+    "cozy",
+    "relax",
+    "galaxy",
+    "art",
+    "dream",
+    "star",
+    "noctis",
+    "ayu",
+    "power",
+    "shell",
+    "hop",
+    "cool",
+    "game",
+    "disc",
+    "linux",
+    "calm",
+    "cat",
+    "gray",
+    "red",
+    "violet",
+    "yellow",
+    "gold",
+    "silver",
+    "obsidian",
+    "max",
+    "min",
+    "day",
+    "mac",
+    "macos",
+    "icon",
+    "coffee",
+    "brown",
+    "clean",
+    "nice",
+    "good",
+    "background",
+    "sun",
+    "true",
+    "mars",
+    "focus",
+    "forest",
+    "vampire",
+    "tesla",
+    "man",
+    "pack",
+    "old",
+    "cor",
+    "kai",
+    "app",
+    "hot",
+    "rose",
+    "zero",
+    "plus",
+    "candy",
+    "wave",
+    "cosmic",
+    "cosmos",
+    "pop",
+    "javascript",
+    "type",
+    "typescript",
+    "clojure",
+    "yaml",
+    "node",
+    "semantic",
+    "ice",
+    "glow",
+    "tea",
+    "fork",
+    "bar",
+    "ai",
+    "vibe",
+    "japan",
+    "bun",
+    "css",
+    "html",
+    "net",
+    "com",
+    "full",
+    "ultra",
+    "text",
+    "terminal",
+    "minimal",
+    "ocean",
+    "extra",
+    "custom",
+    "nomo",
+    "easy",
+    "jelly",
+    "low",
+    "another",
+    "sweet",
+    "luna",
+    "visual",
+    "basic",
+    "owl",
+    "highlighter",
+    "haze",
+    "workbench",
+    "celestial",
+    "mirage",
+    "eclipse",
+    "after",
+    "palette",
+    "catppuccin",
+    "ui",
+    "original",
+    "creative",
+    "intellij",
+    "perfect",
+    "discord",
+    "italic",
+    "1",
+    "lunar",
+    "elegant",
+    "ubuntu",
+    "operator",
+    "sky",
+    "magic",
+    "saturn",
+    "neptune",
+    "duotone",
+    "moonlight",
+    "tomorrow",
+    "tag",
+    "studio",
+    "box",
+    "netbeans",
+    "codesandbox",
+    "vscode",
+    "codestackr",
+    "plastic",
+    "design",
+    "mega",
+    "product",
+    "outrun",
+    "kit",
+    "matrix",
+    "fresh",
+    "dainty",
+    "mariana",
+    "indigo",
+    "crystal",
+    "jupyter",
+    "glass",
+    "cyber",
+    "idea",
+    "void",
+    "zen",
+    "zenburn",
+    "seti",
+    "nova",
+    "arch",
+    "dragon",
+    "sakura"
+  ]
 }
